--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
             </a>
           </div>-->
 
-          <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+          <!--<div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <a href="images/img_5.jpg" class="item-wrap" data-fancybox="gal">
               <span class="icon-search2"></span>
               <img class="img-fluid" src="images/img_5.jpg">
             </a>
-          </div>
+          </div>-->
 
           <div class="item design col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <a href="images/img_9.jpg" class="item-wrap" data-fancybox="gal">
