--- a/project.html
+++ b/project.html
@@ -240,7 +240,7 @@
             <div class="border-top pt-5">
               <p>
             
-            Copyright  All rights reserved | This is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" ></a><b>ram33zz_mohmd </b><a href="https://www.instagram.com/ram33zz_mohmd/?igshid=fy5e2fwv964s"> <span class="icon-instagram"></span></a>
+            Copyright  All rights reserved | This is made with <i class="fas fa-infinity text-danger"  aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" ></a><a href="https://www.instagram.com/ram33zz_mohmd/?igshid=fy5e2fwv964s"><b>ram33zz_mohmd</b> <span class="icon-instagram"></span></a>
             
             </p>
             </div>
@@ -268,7 +268,7 @@
     <script src="js/aos.js"></script>
 
     <script src="js/main.js"></script>
-
+<script src="https://kit.fontawesome.com/0c98b330ee.js" crossorigin="anonymous"></script>
   </body>
 
 </html>
