--- a/services.html
+++ b/services.html
@@ -76,7 +76,7 @@
       </header>
 
     <div class="ftco-blocks-cover-1">
-      <div class="site-section-cover overlay" data-stellar-background-ratio="0.5" style="background-image: url('images/hero_1.jpg')">
+      <div class="site-section-cover overlay" data-stellar-background-ratio="1" style="background-image: url('images/hero_1.jpg')">
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-7">
@@ -294,7 +294,7 @@
             <div class="border-top pt-5">
               <p>
             
-            Copyright  All rights reserved | This is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" ></a><b>ram33zz_mohmd </b><a href="https://www.instagram.com/ram33zz_mohmd/?igshid=fy5e2fwv964s"> <span class="icon-instagram"></span></a>
+            Copyright  All rights reserved | This is made with <i class="fas fa-infinity text-danger"  aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" ></a><a href="https://www.instagram.com/ram33zz_mohmd/?igshid=fy5e2fwv964s"><b>ram33zz_mohmd</b> <span class="icon-instagram"></span></a>
             
             </p>
             </div>
